# oci-route-table-updater

./: Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: release.yml  tests.yml
ortu/: arguments.py  main.py  oci_auth.py  oci_route_table.py
tests/: test_check.py  test_update.py
