[metadata]
name = ortu
description-file = README.md
description-content-type = text/markdown
author = itd27m01
author-email = igortiunov@gmail.com
summary = Route table updater for Oracle Cloud Infrastructure
home-page = https://github.com/ITD27M01/oci-route-table-updater
license = MIT
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent

[files]
packages = ortu

[entry_points]
console_scripts =
    ortu=ortu.main:main

[bdist_wheel]
universal = True

[bdist_rpm]
doc_files = README.md

[pbr]
skip_changelog = True
skip_authors = True
